bad/while_cond_int.example_compiler_output
ERROR
[1mbad/while_cond_int.lat:3:8: [1;31merror: [0;1mwhile condition has to be of type `boolean`, not `int`[m
	while(42) {}
	      [1;32m^[m
